# Research-Team-Chattr-Platform

./: .env.example  .gitignore  Dockerfile  README.md  buildspec.yml  docker-compose.yml  manage.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  researchchat.env
.ebextensions/: 20_db-migrate.config  django.config
chat/: admin.py  models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_remove_bot_starting_user_message_bot_bot_initiates_and_more.py  0003_chatgptinfo_description.py  0004_remove_conversation_uid.py  0005_bot_max_tokens.py  0006_conversation_external_id.py  0007_chatpage_disclaimer.py  0008_conversation_ip_address_alter_bot_model_and_more.py  __init__.py
chat/templates/: base.html
chat/templates/chat/: chat_message.html  chat_room.html
chat/templatetags/: render_vite_bundle.py
chattr_gpt/: settings.py  settings_prod.py  urls.py
chattr_gpt/static/css/: project.css
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: BotTable.jsx  Button.jsx  ChatForm.jsx  ChatHistory.jsx  ChatMessage.jsx  ChatWindow.jsx  ChattrLogo.jsx  CircleCheckIcon.jsx  CircleXIcon.jsx  CodeBlock.jsx  ConversationTable.jsx  Layout.jsx  MarkdownWrapper.jsx  Table.jsx  TableBody.jsx  TableDropDown.jsx  TableHead.jsx  TableRow.jsx
frontend/src/pages/: About.jsx  BotPage.jsx  ChatHistoryPage.jsx  ChatPage.jsx  ConversationPage.jsx  (+4 more)
templates/frontend/: index.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_bio.py
(+8 files in other folders)
